new changes made today

--- a/src/app/auth/new/signchangepass/signchangepass.component.html
+++ b/src/app/auth/new/signchangepass/signchangepass.component.html
@@ -56,7 +56,8 @@
                     <div class="toolInnerWrap">
                       <div class="toolArrow"></div>
 
-                      <p>Password must meet the following requirements:</p>
+                      <p>Password must be a minimum of 8. Include in the password upper and lower case, a number and a
+                        special character (i.e. @,#,$, %, & !):</p>
                       <ul>
                         <li>
                           <span *ngIf="!upperAndLowerCase"><img src="./assets/img/ic_close.png">
