--- a/src/app/auth/sign-up/signup-form/signup-form.component.html
+++ b/src/app/auth/sign-up/signup-form/signup-form.component.html
@@ -129,7 +129,7 @@
 
           </div>
           <!-- Recaptch -->
-          <div class="form-group">
+          <div class="form-group cWrap">
             <re-captcha
               #captchaRef
               name="captcha"
