--- a/src/app/dashboard/breadcrumb/breadcrumb.component.html
+++ b/src/app/dashboard/breadcrumb/breadcrumb.component.html
@@ -1,4 +1,4 @@
-<div class="row db-bread-wrap">
+<div class="db-bread-wrap">
   <ol class="breadcrumb  w-100">
       <li class="breadcrumb-item">urLease</li>
       <li class="breadcrumb-item">Dashboard</li>
