--- a/src/app/dashboard/contact/contact.component.html
+++ b/src/app/dashboard/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="col-12 db-inner-wrap   ">
   <!--breadcrums Starts Here-->
-  <div class="row db-bread-wrap">
+  <div class="db-bread-wrap">
     <ol class="breadcrumb  w-100">
       <li class="breadcrumb-item">urLease</li>
       <li class="breadcrumb-item">Dashboard</li>
@@ -13,7 +13,6 @@
     <div class="faqWrap">Contact</div>
     <div class="btmBorder"></div>
     <p>Customer Service: +1 877-257-2094</p>
-
 
 
   </div>
