--- a/src/app/dashboard/epp/eppstatic/eppstatic.component.html
+++ b/src/app/dashboard/epp/eppstatic/eppstatic.component.html
@@ -1,6 +1,6 @@
 <div class="col-12 db-inner-wrap  ">
   <!--breadcrums Starts Here-->
-  <div class="row db-bread-wrap">
+  <div class="db-bread-wrap">
     <ol class="breadcrumb  w-100">
       <li class="breadcrumb-item">urLease</li>
       <li class="breadcrumb-item">Dashboard</li>
@@ -10,7 +10,7 @@
   </div>
   <!--wraper for FAQ-->
   <div class="db-inner-box col-12 epp eol ">
-  
+
   <div class="faqWrap">EPP</div>
 <div class="btmBorder"></div>
 <br>
