--- a/src/app/dashboard/left-side-bar/left-side-bar.component.html
+++ b/src/app/dashboard/left-side-bar/left-side-bar.component.html
@@ -14,20 +14,18 @@
 
   </div>
   <ul class="lft-icon-wrap p-0">
-    <li [routerLinkActive]="['active']" [routerLink]="['home']" >
-      <div class="icnWrap ">
-        <img class="icn" src="assets/img/ls-home.svg">
-        <br>
+    <li [routerLinkActive]="['active']" [routerLink]="['home']">
+      <div class="icnWrap ls-home ">
+
         <span class="nrtitle">Home</span>
       </div>
       <div class="extitle">Home</div>
 
 
     </li>
-    <li [routerLinkActive]="['active']" [routerLink]="['epp']" >
-      <div class="icnWrap">
-        <img class="icn" src="assets/img/ls-epp.svg">
-        <br>
+    <li [routerLinkActive]="['active']" [routerLink]="['epp']">
+      <div class="icnWrap ls-epp">
+
         <span class="nrtitle">EPP</span>
       </div>
       <div class="extitle">EPP
@@ -38,40 +36,36 @@
 
 
     </li>
-    <li [routerLinkActive]="['active']" [routerLink]="['claims']" >
-      <div class="icnWrap">
-        <img class="icn" src="assets/img/ls-claims.svg">
-        <br>
+    <li [routerLinkActive]="['active']" [routerLink]="['claims']">
+      <div class="icnWrap ls-claims">
+
         <span class="nrtitle">Claims</span>
       </div>
       <div class="extitle">Claims</div>
 
 
     </li>
-    <li [hidden]="!showeol" [routerLinkActive]="['active']" [routerLink]="['eol']" >
-      <div class="icnWrap">
-        <img class="icn" src="assets/img/ls-eol.svg">
-        <br>
+    <li [hidden]="!showeol" [routerLinkActive]="['active']" [routerLink]="['eol']">
+      <div class="icnWrap ls-eol">
+
         <span class="nrtitle">EOL</span>
       </div>
       <div class="extitle">End of Lease Options</div>
 
 
     </li>
-    <li [routerLinkActive]="['active']" [routerLink]="['faq']" >
-      <div class="icnWrap ">
-        <img class="icn" src="assets/img/ls-faq.svg">
-        <br>
+    <li [routerLinkActive]="['active']" [routerLink]="['faq']">
+      <div class="icnWrap ls-faq ">
+
         <span class="nrtitle">FAQ</span>
       </div>
       <div class="extitle">FAQ</div>
 
 
     </li>
-    <li [routerLinkActive]="['active']" [routerLink]="['contact']" >
-      <div class="icnWrap">
-        <img class="icn" src="assets/img/ls-phone.svg">
-        <br>
+    <li [routerLinkActive]="['active']" [routerLink]="['contact']">
+      <div class="icnWrap ls-con">
+
         <span class="nrtitle">Contact</span>
       </div>
       <div class="extitle">Contact Us</div>
