--- a/src/app/dashboard/eol/eol.component.html
+++ b/src/app/dashboard/eol/eol.component.html
@@ -1,6 +1,6 @@
 <div class="col-12 db-inner-wrap  ">
   <!--breadcrums Starts Here-->
-  <div class="row db-bread-wrap">
+  <div class="r db-bread-wrap">
     <ol class="breadcrumb  w-100">
       <li class="breadcrumb-item">urLease</li>
       <li class="breadcrumb-item">Dashboard</li>
