--- a/src/app/dashboard/faq/faq.component.html
+++ b/src/app/dashboard/faq/faq.component.html
@@ -1,6 +1,6 @@
 <div class="col-12 db-inner-wrap faq-o-wrap ">
   <!--breadcrums Starts Here-->
-  <div class="row db-bread-wrap bg-warning">
+  <div class="db-bread-wrap bg-warning">
     <div class="pdfDownload"><a target="_blank"
                                 href="https://www.firstdata.com/downloads/marketing-merchant/Global_Leasing_FAQ_FNL_USA_072015.pdf">
       <img src="/assets/img/download.svg">Download
