--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="row ">
+
   <div class="col logoWrap mobview d-md-none d-block">
 
 
@@ -18,7 +18,7 @@
             -Select Product-
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-             
+
             <a class="dropdown-item" >Clover Capital</a>
             <a class="dropdown-item" >Advanced Same Day Funding </a>
           </div>
@@ -33,7 +33,7 @@
 
         <div class=" but-wrap d-md-block d-sm-none d-none ">
           <button id="capital-trigger" type="button" class="btn btn-outline-secondary" class="btn btn-outline-primary" placement="bottom"  triggers="click:blur">Clover Capital</button>
-          <!-- <button type="button" class="btn btn-outline-secondary" class="btn btn-outline-primary"   triggers="click:blur" class="btn btn-outline-primary ">Advanced Same Day Funding</button> -->
+          <button type="button" class="btn btn-outline-secondary" class="btn btn-outline-primary"   triggers="click:blur" class="btn btn-outline-primary ">Advanced Same Day Funding</button>
           <div id="capital-tooltip" style="display: none;">Coming Soon</div>
         </div>
         <div class="icon-wrap  float-right">
@@ -61,7 +61,7 @@
 
 
   </div>
-</div>
+
 
 
 <!-- -------------alerts popup------------------- -->
