--- a/src/app/landing-page/land-hero/land-hero.component.html
+++ b/src/app/landing-page/land-hero/land-hero.component.html
@@ -10,9 +10,9 @@
           <h4 class="fd-Heading text-center">First Data Global Leasing</h4>
           <br>
           <p class="norTxt text-center">First Data Global Leasing specializes in providing cost-effective
-            <br>options for
+            options for
             leasing of
-            point-of-sale equipment to support your<br> business’s long and short-term needs and goals.</p>
+            point-of-sale equipment to support your business’s long and short-term needs and goals.</p>
         </div>
       </div>
 
