--- a/src/app/landing-page/landing/landing.component.html
+++ b/src/app/landing-page/landing/landing.component.html
@@ -1,12 +1,14 @@
 <div id="land-wrap" class="container-fluid ">
   <div id="land-outer-wrap">
+    <div class="row">
+      <app-land-head></app-land-head>
+    </div>
 
-    <app-land-head></app-land-head>
     <app-land-hero></app-land-hero>
     <div class="row">
       <app-land-cnt-01></app-land-cnt-01>
     </div>
 
-      <app-land-cnt-02></app-land-cnt-02>
+    <app-land-cnt-02></app-land-cnt-02>
   </div>
 </div>
